...
            if newWindow {
                file.addItem(NSMenuItem(Command.newWindow))
            }
            file.addItem(NSMenuItem(Command.closeWindow))
            addItem(submenu(file))

            let edit = NSMenu(title: "Edit")
            edit.addItem(withTitle: "Undo", action: Selector(("undo:")), keyEquivalent: "z")
            let redo = edit.addItem(
                withTitle: "Redo",
                action: Selector(("redo:")),
                keyEquivalent: "z"
            )
...
